--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@supabase/supabase-js": "^2.41.1",
-    "next": "14.1.4",
+    "next": "^14.2.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
